fix in home-product block on small devices

--- a/theme/clms/css/home.css
+++ b/theme/clms/css/home.css
@@ -81,7 +81,7 @@
   }
 
   .home-products-container {
-    padding-top: 2rem;
+    padding-top: 0.5rem;
   }
 }
 @media (max-width: 420px) {
@@ -216,6 +216,10 @@
   .home-product {
     width: 100%;
     height: 30vw;
+  }
+
+  .home-products-container {
+    margin-top: -1.5rem;
   }
 }
 @media (max-width: 480px) {
